# ultra96_trd

./: .gitignore  README.md  create_dsa.tcl  dm1.tcl  dm1.xdc  dm1_preset.tcl  dm6.tcl  dm6.xdc  dm6_preset.tcl  mipi_csi2_rx_hier.tcl  tpg_input_hier.tcl
petalinux/: dm1.bif  dm1.txt  dm2.bif  dm2.txt  dm3.bif  dm3.txt  dm4.bif  dm4.txt  dm5.txt  dm6.txt  dm7.txt  dm8.txt  repo_server.txt
petalinux/gstsdxfilter2d/: CMakeLists.txt  filter2d_cv.cpp  filter2d_sds.h  gstsdxfilter2d.cpp
petalinux/linux-xlnx/: 0001-drm-xlnx-zynqmp-Don-t-update-the-plane-for-the-same-.patch
petalinux/meta-inipro/conf/: layer.conf
petalinux/meta-inipro/recipes-apps/f2d/: f2d.bb
petalinux/meta-inipro/recipes-apps/gst-lib/: gst-lib.bb
petalinux/meta-inipro/recipes-apps/gst-sdx/: gst-sdx.bb
petalinux/meta-inipro/recipes-apps/libsds/: libsds.bb
petalinux/meta-inipro/recipes-apps/perfapm/: perfapm-client-test.bb  perfapm-client.bb
petalinux/meta-inipro/recipes-apps/showimage/: showimage.bb
petalinux/meta-inipro/recipes-apps/trd-files/: trd-files.bb
petalinux/meta-inipro/recipes-apps/video-lib/: video-lib.bb
petalinux/meta-inipro/recipes-apps/video-qt2/: video-qt2.bb
petalinux/meta-inipro/recipes-bsp/pmu-firmware/: pmu-firmware_%.bbappend
petalinux/meta-inipro/recipes-core/base-files/: base-files_%.bbappend
petalinux/meta-inipro/recipes-core/busybox/: busybox_1.%.bbappend
petalinux/meta-inipro/recipes-core/packagegroups/: packagegroup-petalinux-opencv.bbappend
sdsoc/: copy.sh  platform.tcl
sdsoc/resources/prebuilt/: apsys_0.xml  portinfo.c  portinfo.h
workspaces/: ws_f2dof.txt  ws_heartbeat.txt  ws_perfapm-client.txt  ws_perfapm-server.txt  ws_perfapm.txt
workspaces/ws_f2dof/: CMakeLists.txt  aarch64.cmake
workspaces/ws_f2dof/filter2d/: CMakeLists.txt  gstsdxfilter2d.cpp  gstsdxfilter2d.h
workspaces/ws_f2dof/optical_flow/: CMakeLists.txt  gstsdxopticalflow.cpp  gstsdxopticalflow.h
(+138 files in other folders)
